# pravschool_bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CNAME  Dockerfile  LICENSE  README.md  add_rasp.py  bot.py  config.py  database.db  db.py  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  env_example  ids.txt  imports.py  keyboards.py  pyproject.toml  requirements.txt  rs-bot.db  run.py  systemd_example.service  users.db
.github/workflows/: pages.yml
assets/locales/ru/: buttons.ftl  messages.ftl  notifications.ftl  utils.ftl
db/: __init__.py  base.py  tables.py
db/methods/: __init__.py  create.py  delete.py  get.py  update.py
dev_mode/: __main__.py
handlers/: callback.py  common.py  inline.py  states.py  text.py
keyboards/: keyboards.py
migrations/: env.py
migrations/versions/: 0001_first_commit.py  3ebab24bb9b7_first_commit.py  9923db48c0ac_first_commit1.py  9d779c8f40f2_first_commit2.py
misc/: singleton.py
netschoolapi/: async_client_wrapper.py  netschoolapi.py  schemas.py
src/: __main__.py  lifespan.py
src/container/: __init__.py  di.py
src/container/providers/: __init__.py  bot.py  config.py  database.py  i18n.py  redis.py  retort.py  services.py
src/core/: constants.py  enums.py  exceptions.py  logger.py  types.py
src/core/config/: __init__.py  app.py  base.py  bot.py  db.py  logging.py  netschool.py  redis.py
src/core/dto/: __init__.py  base.py  broadcast.py  message_payload.py  netschool.py  schedule.py  user.py
src/core/i18n/: __init__.py  translator.py
src/core/utils/: __init__.py  converters.py  crypto.py  formatters.py  json.py  time.py
src/infrastructure/cache/: __init__.py  key_builder.py  keys.py  redis.py
src/infrastructure/db/: __init__.py  alembic.ini  uow.py
src/infrastructure/db/migrations/: env.py  script.py.mako
src/infrastructure/db/models/: __init__.py  base.py  broadcast.py  schedule.py  (+2 more)
src/infrastructure/http/: __init__.py  base.py  netschool.py  schemas.py
src/infrastructure/parsers/: schedule.py
src/infrastructure/taskiq/: broker.py  middlewares.py  scheduler.py  worker.py
src/services/: base.py  bot.py  broadcast.py  notification.py  schedule.py  schedules_extra.py  user.py  webhook.py
src/services/netschool/: __init__.py  api_factory.py  service.py
src/transport/http/: __init__.py  app.py  utils.py
src/transport/telegram/: __init__.py  dispatcher.py  keyboards.py  manager.py  states.py  window.py
tg_bot/: __init__.py  __main__.py  config.py  demo.html  ids.txt  misc.py  profile.html
tg_bot/backend/: __init__.py  add_rasp.py  notifications.py  send_duty.py
tg_bot/filters/: user.py
tg_bot/handlers/: admin.py  callback.py  common.py  dialog.py  inline.py  service.py  states.py  text.py
tg_bot/keyboards/: __init__.py  admin.py  common.py  general.py  inline.py  keyboards.py  keyboards_old.py
tg_bot/middlewares/: __init__.py  database.py
tg_bot/models/: __init__.py  base.py  code.py  db.py  photo.py  schedule.py  service.py  user.py  whore.py
tg_bot/states/: __init__.py  admin.py  user.py
tg_bot/templates/: __init__.py  common.py
tg_bot/utils/: add_rasp.py  commands.py  logging.py  notifications.py  ns.py  redis.py  register.py  rooms.py  web.py
tg_bot/web/: get.py  post.py
tg_bot/web_edit/: add_rasp.py  send_duty.py
tg_bot/web_routes/: __init__.py  demo.html  get.py  post.py
tg_bot/xl_uploads/: BQACAgIAAxkBAAIYvGPs_0XIbkm9vPkGiaNp63tihnNRAAIkJQACmxqhSmQNB403FwQKLgQ.xlsx
(+52 files in other folders)
