[tool.poetry]
name = "pravschool_bot"
version = "0.1.0"
description = ""
authors = ["agosset15 <ag15@ag15.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
dill = "^0.3.9"
python = "^3.11"
sqlalchemy = "^2.0.37"
aiogram = "^3.18.0"
alembic = "^1.14.1"
python-dotenv = "^1.0.1"
marshmallow-dataclass = "^8.5.11"
requests = "^2.31.0"
openpyxl = "^3.1.5"
apscheduler = "^3.11.0"
aiohttp = "^3.11.11"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
marshmallow = "^3.26.1"
httpx = "^0.28.1"
envparse = "^0.2.0"
loguru = "^0.7.3"
redis = "^5.2.1"
sentry-sdk = "2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
