[project]
name = "pravschool_bot"
version = "5.1.0"
description = ""
authors = [{ name = "agosset15", email = "ag15@ag15.ru" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram~=3.24.0",
    "alembic~=1.14.1",
    "aiohttp~=3.13.3",
    "apscheduler~=3.11.0",
    "asyncpg~=0.31.0",
    "dill~=0.3.9",
    "envparse~=0.2.0",
    "httpx~=0.28.1",
    "loguru~=0.7.3",
    "openpyxl~=3.1.5",
    "psycopg2-binary~=2.9.10",
    "pydantic~=2.12.5",
    "python-dotenv~=1.0.1",
    "redis~=5.2.1",
    "requests~=2.31.0",
    "sentry-sdk~=2.22.0",
    "sqlalchemy~=2.0.38",
    "typing-extensions~=4.14.1",
]

[project.scripts]
start = "tg_bot.__main__:main"

[project.urls]
homepage = "https://t.me/pravschool_bot"
repository = "https://github.com/agosset15/pravschool_bot"

[dependency-groups]
dev = [
    "ruff~=0.14",
    "ty==0.0.9",
    "pytest>=8.4.2",
    "ftl-extract>=0.9.0",
    "types-cachetools",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "Q",
    "T",
    "W",
    "YTT",
]
lint.ignore = ["N805"]
exclude = ["venv", ".venv", ".idea", "tests"]

