[project]
name = "pravschool_bot"
version = "5.1.0"
description = ""
authors = [{ name = "agosset15", email = "ag15@ag15.ru" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiogram~=3.25.0",
    "alembic~=1.18.4",
    "aiohttp~=3.13.3",
    "apscheduler~=3.11.0",
    "asyncpg~=0.31.0",
    "dill~=0.4.1",
    "envparse~=0.2.0",
    "httpx~=0.28.1",
    "loguru~=0.7.3",
    "openpyxl~=3.1.5",
    "psycopg2-binary~=2.9.10",
    "pydantic~=2.12.5",
    "redis~=7.2.0",
    "sentry-sdk~=2.53.0",
    "sqlalchemy~=2.0.38",
    "typing-extensions~=4.15.0",
    "fastapi>=0.132.0",
    "dishka>=1.8.0",
    "uvicorn>=0.41.0",
    "pydantic-settings>=2.13.1",
    "adaptix==3.0.0b11",
    "orjson>=3.11.7",
    "fluentogram>=1.2.1",
    "aiogram-dialog>=2.4.0",
    "diagrams>=0.25.1",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
]

[project.urls]
homepage = "https://t.me/pravschool_bot"
repository = "https://github.com/agosset15/pravschool_bot"

[dependency-groups]
dev = [
    "ruff~=0.15.1",
    "ty==0.0.17",
    "pytest>=8.4.2",
    "ftl-extract>=0.9.0",
    "types-cachetools",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "Q",
    "T",
    "W",
    "YTT",
]
lint.ignore = ["N805"]
exclude = ["venv", ".venv", ".idea", "tests"]

[tool.ty]
rules.invalid-argument-type = "ignore"
